--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".utils.MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,19 +17,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31"
-        android:name=".utils.MyApplication">
+        tools:targetApi="31">
         <activity
             android:name=".view.TransactionStatusActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".view.RefundTransactionActivity"
             android:exported="true" />
-
         <activity
             android:name=".view.SucessFlowActivity"
             android:exported="false" />
@@ -43,7 +38,7 @@
             android:usesCleartextTraffic="true" />
         <activity
             android:name=".view.GenarateQrActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".view.PinActivity"
             android:exported="true" />
