--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,5 +167,7 @@ dependencies {
 
     implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
     implementation 'com.google.zxing:core:3.4.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.8.0'
+    implementation 'com.squareup.okhttp3:mockwebserver:3.12.1'
 
 }
